--- a/css/main.css
+++ b/css/main.css
@@ -938,7 +938,7 @@ ul.about {
     -webkit-border-radius: 99em;
     -moz-border-radius: 99em;
     border-radius: 99em;
-    background-image: url('../images/img/front.png');
+    /* background-image: url('../images/img/front.png'); */
     margin-top: 25px;
     margin-bottom: 7px;
 }
